--- a/war/rapla.html
+++ b/war/rapla.html
@@ -23,7 +23,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="Test_gwt_app/Test_gwt_app.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="Rapla/Rapla.nocache.js"></script>
   </head>
 
   <!--                                           -->
