--- a/war/rapla.html
+++ b/war/rapla.html
@@ -37,27 +37,30 @@
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
     
     <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
-    <noscript>
-      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-        Your web browser must have JavaScript enabled
-        in order for this application to display correctly.
-      </div>
-    </noscript>
+<!--     <noscript> -->
+<!--       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif"> -->
+<!--         Your web browser must have JavaScript enabled -->
+<!--         in order for this application to display correctly. -->
+<!--       </div> -->
+<!--     </noscript> -->
 
     <h1>Rapla HTML GUI</h1>
 
-    <table align="center">
-      <tr>
-        <td colspan="3" style="font-weight:bold;">Please enter your username and password:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="passwordFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="3" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-    </table>
+	<div id="raplaRoot">
+		
+	</div>
+<!--     <table align="center"> -->
+<!--       <tr> -->
+<!--         <td colspan="3" style="font-weight:bold;">Please enter your username and password:</td>         -->
+<!--       </tr> -->
+<!--       <tr> -->
+<!--         <td id="nameFieldContainer"></td> -->
+<!--         <td id="passwordFieldContainer"></td> -->
+<!--         <td id="sendButtonContainer"></td> -->
+<!--       </tr> -->
+<!--       <tr> -->
+<!--         <td colspan="3" style="color:red;" id="errorLabelContainer"></td> -->
+<!--       </tr> -->
+<!--     </table> -->
   </body>
 </html>
