Added provider implementation (including enum types for views), deleted some old views and refactored architecture (mostly changed names of classes).

--- a/war/rapla.html
+++ b/war/rapla.html
@@ -50,6 +50,10 @@
 	<div id="raplaRoot">
 		
 	</div>
+	
+	<div id="popupRoot">
+	
+	</div>
 <!--     <table align="center"> -->
 <!--       <tr> -->
 <!--         <td colspan="3" style="font-weight:bold;">Please enter your username and password:</td>         -->
