seperate rapla.css into rapla.css and mwi.css; bootstrap testing

--- a/war/rapla.html
+++ b/war/rapla.html
@@ -10,8 +10,11 @@
 
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
-    <!--                                                               -->
+    <!--<link type="text/css" rel="stylesheet" href="bootstrap.css"> -->
+                                                                 
     <link type="text/css" rel="stylesheet" href="rapla.css">
+    <link type="text/css" rel="stylesheet" href="mwi.css">
+    
 
     <!--                                           -->
     <!-- Any title is fine                         -->
