--- a/war/rapla.html
+++ b/war/rapla.html
@@ -49,20 +49,8 @@
     <h1>Rapla HTML GUI</h1>
 
 	<div id="raplaRoot">
-		
 	</div>
-<!--     <table align="center"> -->
-<!--       <tr> -->
-<!--         <td colspan="3" style="font-weight:bold;">Please enter your username and password:</td>         -->
-<!--       </tr> -->
-<!--       <tr> -->
-<!--         <td id="nameFieldContainer"></td> -->
-<!--         <td id="passwordFieldContainer"></td> -->
-<!--         <td id="sendButtonContainer"></td> -->
-<!--       </tr> -->
-<!--       <tr> -->
-<!--         <td colspan="3" style="color:red;" id="errorLabelContainer"></td> -->
-<!--       </tr> -->
-<!--     </table> -->
+	<div id="raplaPopup">
+	</div>
   </body>
 </html>
