Add appointment planning view and custom css

--- a/war/rapla.html
+++ b/war/rapla.html
@@ -14,6 +14,7 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="rapla.css">
+    <link type="text/css" rel="stylesheet" href="felix.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
