--- a/war/login.html
+++ b/war/login.html
@@ -13,7 +13,7 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="rapla.css">
+    <link type="text/css" rel="stylesheet" href="login.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
